--- a/package.json
+++ b/package.json
@@ -11,24 +11,28 @@
         "lint": "eslint --fix"
     },
     "dependencies": {
-        "vue": "^3.2.20",
-        "vue-router": "^4.0.12",
-        "vuex": "^4.0.2"
+        "axios": "^0.21.1",
+        "sass": "^1.36.0",
+        "sass-loader": "^12.1.0",
+        "vue": "^2.6.14",
+        "vue-loader": "^15.9.6",
+        "vue-router": "^3.2.0",
+        "vuex": "^3.4.0",
+        "vue-template-compiler": "^2.6.14",
+        "vuetify": "^2.5.10",
+        "lodash": "^4.17.19",
+        "postcss": "^8.1.14"
     },
     "devDependencies": {
-        "axios": "^0.21",
-        "eslint": "^8.1.0",
-        "eslint-plugin-import": "^2.25.2",
+        "deepmerge": "^4.2.2",
+        "eslint": "^6.7.2",
+        "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-promise": "^4.3.1",
-        "eslint-plugin-standard": "^4.1.0",
-        "eslint-plugin-vue": "^8.0.3",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^4.0.0",
+        "eslint-plugin-vue": "^6.2.2",
         "laravel-mix": "^6.0.37",
-        "lint-staged": "^11.2.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "vue-jest": "^5.0.0-0",
-        "vue-loader": "^16.8.2"
+        "lint-staged": "^9.5.0"
     },
     "gitHooks": {
         "pre-commit": "lint-staged"
