--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     },
     "dependencies": {
         "axios": "^0.21.1",
+        "lodash": "^4.17.19",
+        "postcss": "^8.1.14",
         "sass": "^1.36.0",
         "sass-loader": "^12.1.0",
         "vue": "^2.6.14",
         "vue-loader": "^15.9.6",
         "vue-router": "^3.2.0",
-        "vuex": "^3.4.0",
         "vue-template-compiler": "^2.6.14",
         "vuetify": "^2.5.10",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "vuex": "^3.4.0"
     },
     "devDependencies": {
         "deepmerge": "^4.2.2",
-        "eslint": "^6.7.2",
+        "eslint": "^6.8.0",
         "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.0",
-        "eslint-plugin-vue": "^6.2.2",
+        "eslint-plugin-vue": "^8.0.3",
         "laravel-mix": "^6.0.37",
         "lint-staged": "^9.5.0"
     },
