--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vuex": "^3.4.0"
     },
     "devDependencies": {
+        "@mdi/font": "^6.5.95",
         "deepmerge": "^4.2.2",
         "eslint": "^6.8.0",
         "eslint-plugin-import": "^2.20.2",
