--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "eslint-plugin-standard": "^4.0.0",
         "eslint-plugin-vue": "^8.0.3",
         "laravel-mix": "^6.0.37",
-        "lint-staged": "^9.5.0"
+        "lint-staged": "^9.5.0",
+        "material-design-icons-iconfont": "^6.1.1"
     },
     "gitHooks": {
         "pre-commit": "lint-staged"
