--- a/.env.example
+++ b/.env.example
@@ -2,18 +2,21 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://reservationform-laravue.test
+
+SAIL_XDEBUG_MODE=develop,debug,coverage
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=reservationform_laravue
 DB_USERNAME=root
 DB_PASSWORD=
+FORWARD_DB_PORT=3306
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -22,9 +25,18 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+# For Lareval Sanctum
+# See: config/sanctum.php
+# See: https://readouble.com/laravel/8.x/ja/sanctum.html#configuring-your-first-party-domains
+SANCTUM_STATEFUL_DOMAINS=localhost
+SPA_URL=http://localhost
+# See: config/session.php
+# See: https://readouble.com/laravel/8.x/ja/sanctum.html#cors-and-cookies
+SESSION_DOMAIN=localhost
 
-REDIS_HOST=127.0.0.1
+MEMCACHED_HOST=memcached
+
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -35,7 +47,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_NAME="${APP_NAME} [local]"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -50,3 +62,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SCOUT_DRIVER=meilisearch
+MEILISEARCH_HOST=http://meilisearch:7700
