--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production",
-        "lint": "eslint --fix \"resources/js/**\""
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint --fix \"resources/js/**\"",
+        "prepare": "husky install"
     },
     "dependencies": {
         "axios": "^0.21.1",
@@ -32,12 +28,11 @@
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.0",
         "eslint-plugin-vue": "^8.0.3",
-        "laravel-mix": "^6.0.37",
-        "lint-staged": "^9.5.0",
-        "material-design-icons-iconfont": "^6.1.1"
-    },
-    "gitHooks": {
-        "pre-commit": "lint-staged"
+        "husky": "^8.0.1",
+        "laravel-vite-plugin": "^0.7.0",
+        "lint-staged": "^13.0.3",
+        "material-design-icons-iconfont": "^6.1.1",
+        "vite": "^3.2.2"
     },
     "lint-staged": {
         "*.{js,jsx,vue}": [
