--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
         "vite": "^3.2.2"
     },
     "lint-staged": {
-        "*.{js,jsx,vue}": [
-            "npm run lint",
-            "git add"
-        ]
+        "**/*.php": "./vendor/bin/pint",
+        "*.{js,jsx,vue}": "npm run lint"
     }
 }
