chore(deps): init Vuetify3.0

--- a/tsconfig.config.json
+++ b/tsconfig.config.json
@@ -4,6 +4,6 @@
   "compilerOptions": {
     "strict": true,
     "composite": true,
-    "types": ["node"]
+    "types": ["node", "vuetify"]
   }
 }
