--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
         "*.{js,jsx,vue}": "npm run lint"
     },
     "dependencies": {
+        "@mdi/font": "5.9.55",
         "pinia": "^2.0.23",
+        "roboto-fontface": "*",
         "vue": "^3.2.36",
-        "vue-router": "^4.1.6"
+        "vue-router": "^4.1.6",
+        "vuetify": "^3.0.0",
+        "webfontloader": "^1.0.0"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
         "@types/jsdom": "^20.0.0",
         "@types/node": "^16.11.56",
+        "@types/webfontloader": "^1.6.35",
         "@vitejs/plugin-vue": "^3.2.0",
         "@vitejs/plugin-vue-jsx": "^2.1.0",
         "@vue/eslint-config-prettier": "^7.0.0",
@@ -33,19 +38,20 @@
         "@vue/tsconfig": "^0.1.3",
         "axios": "^1.1.3",
         "eslint": "^8.22.0",
-        "eslint-plugin-vue": "^9.7.0",
         "eslint-plugin-cypress": "^2.12.1",
+        "eslint-plugin-vue": "^9.7.0",
         "husky": "^8.0.1",
+        "jsdom": "^20.0.2",
         "laravel-vite-plugin": "^0.7.0",
         "lint-staged": "^13.0.3",
         "lodash": "^4.17.21",
-        "postcss": "^8.4.18",
-        "jsdom": "^20.0.2",
         "npm-run-all": "^4.1.5",
+        "postcss": "^8.4.18",
         "prettier": "^2.7.1",
         "start-server-and-test": "^1.14.0",
         "typescript": "^4.8.4",
         "vite": "^3.2.2",
+        "vite-plugin-vuetify": "^1.0.0",
         "vitest": "^0.24.5",
         "vue-tsc": "^1.0.9"
     }
