--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
-[*.vue]
+[*.{js,jsx,ts,tsx,vue}]
 indent_size = 2
 
 [*.js]
