--- a/package.json
+++ b/package.json
@@ -2,40 +2,51 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
-        "lint": "eslint --fix \"resources/js/**\"",
+        "build": "run-p type-check build-only",
+        "preview": "vite preview --port 4173",
+        "test:unit": "vitest --environment jsdom",
+        "test:e2e": "start-server-and-test preview http://localhost:4173/ 'cypress open --e2e'",
+        "test:e2e:ci": "start-server-and-test preview http://localhost:4173/ 'cypress run --e2e'",
+        "build-only": "vite build",
+        "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+        "lint": "eslint ./resources --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
         "prepare": "husky install"
-    },
-    "dependencies": {
-        "axios": "^0.21.1",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "sass": "^1.36.0",
-        "sass-loader": "^12.1.0",
-        "vue": "^2.6.14",
-        "vue-loader": "^15.9.6",
-        "vue-router": "^3.2.0",
-        "vue-template-compiler": "^2.6.14",
-        "vuetify": "^2.5.10",
-        "vuex": "^3.4.0"
-    },
-    "devDependencies": {
-        "@mdi/font": "^6.5.95",
-        "deepmerge": "^4.2.2",
-        "eslint": "^6.8.0",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-promise": "^4.2.1",
-        "eslint-plugin-standard": "^4.0.0",
-        "eslint-plugin-vue": "^8.0.3",
-        "husky": "^8.0.1",
-        "laravel-vite-plugin": "^0.7.0",
-        "lint-staged": "^13.0.3",
-        "material-design-icons-iconfont": "^6.1.1",
-        "vite": "^3.2.2"
     },
     "lint-staged": {
         "**/*.php": "./vendor/bin/pint",
         "*.{js,jsx,vue}": "npm run lint"
+    },
+    "dependencies": {
+        "pinia": "^2.0.23",
+        "vue": "^3.2.36",
+        "vue-router": "^4.1.6"
+    },
+    "devDependencies": {
+        "@rushstack/eslint-patch": "^1.1.4",
+        "@types/jsdom": "^20.0.0",
+        "@types/node": "^16.11.56",
+        "@vitejs/plugin-vue": "^3.2.0",
+        "@vitejs/plugin-vue-jsx": "^2.1.0",
+        "@vue/eslint-config-prettier": "^7.0.0",
+        "@vue/eslint-config-typescript": "^11.0.0",
+        "@vue/test-utils": "^2.0.2",
+        "@vue/tsconfig": "^0.1.3",
+        "axios": "^1.1.3",
+        "eslint": "^8.22.0",
+        "eslint-plugin-vue": "^9.7.0",
+        "eslint-plugin-cypress": "^2.12.1",
+        "husky": "^8.0.1",
+        "laravel-vite-plugin": "^0.7.0",
+        "lint-staged": "^13.0.3",
+        "lodash": "^4.17.21",
+        "postcss": "^8.4.18",
+        "jsdom": "^20.0.2",
+        "npm-run-all": "^4.1.5",
+        "prettier": "^2.7.1",
+        "start-server-and-test": "^1.14.0",
+        "typescript": "^4.8.4",
+        "vite": "^3.2.2",
+        "vitest": "^0.24.5",
+        "vue-tsc": "^1.0.9"
     }
 }
